--- a/servidor_minecraft/plugins/Palolol/config.yml
+++ b/servidor_minecraft/plugins/Palolol/config.yml
@@ -1,3 +1,6 @@
+jaula-width: 6
+jaula-length: 6
+jaula-height: 5
 en-cooldown: estas en cooldown
 muy-cerca: estas muy cerca de otra jaula
 cooldown: 15
