--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Feb 05 18:58:22 UTC 2025
+#Thu Feb 06 20:12:24 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -33,7 +33,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
+motd=
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
@@ -46,10 +46,10 @@ rcon.password=
 rcon.port=25575
 region-file-compression=deflate
 require-resource-pack=true
-resource-pack=https\://download.mc-packs.net/pack/280f50f552c40ffa15ec1aa812270a57f5c448d0.zip
+resource-pack=https\://download.mc-packs.net/pack/e13df897dccfbd7e1e2de2f2885da1ea2298ad0b.zip
 resource-pack-id=
-resource-pack-prompt=Hola\!, necesitas el texture pack para entrar\! por favor acepta \:)
-resource-pack-sha1=280f50f552c40ffa15ec1aa812270a57f5c448d0
+resource-pack-prompt=
+resource-pack-sha1=e13df897dccfbd7e1e2de2f2885da1ea2298ad0b
 server-ip=
 server-port=25565
 simulation-distance=10
