--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Feb 06 20:12:24 UTC 2025
+#Sat Feb 08 17:03:49 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -46,10 +46,10 @@ rcon.password=
 rcon.port=25575
 region-file-compression=deflate
 require-resource-pack=true
-resource-pack=https\://download.mc-packs.net/pack/e13df897dccfbd7e1e2de2f2885da1ea2298ad0b.zip
+resource-pack=
 resource-pack-id=
 resource-pack-prompt=
-resource-pack-sha1=e13df897dccfbd7e1e2de2f2885da1ea2298ad0b
+resource-pack-sha1=
 server-ip=
 server-port=25565
 simulation-distance=10
