--- a/servidor_minecraft/plugins/AnimatedScoreboard/scoreboards/adminboard.yml
+++ b/servidor_minecraft/plugins/AnimatedScoreboard/scoreboards/adminboard.yml
@@ -20,19 +20,19 @@ display:
       score: 98
     line-3:
       text:
-      - "|    ʀᴀɴɢᴏ : %luckperms_prefix%"
+      - "|    💎 ʀᴀɴɢᴏ : %luckperms_prefix%"
       random: false
       interval: 20
       score: 97
     line-4:
       text:
-      - "|    ᴀʟɢᴏ : $150"
+      - "|    ☂ ᴀʟɢᴏ : $150"
       random: false
       interval: 60
       score: 96
     line-5:
       text:
-      - "|    ᴏᴛʀᴀ ᴄᴏsᴀ : 97"
+      - "|    🔥 ᴏᴛʀᴀ ᴄᴏsᴀ : 97"
       random: false
       interval: 60
       score: 95 
@@ -50,19 +50,19 @@ display:
       score: 94
     line-9:
       text:
-      - "|    ᴊᴜɢᴀᴅᴏʀᴇs : %server_online%"     
+      - "|    ☺ ᴊᴜɢᴀᴅᴏʀᴇs : %server_online%"     
       random: true
       interval: 1
       score: 93
     line-10:
       text:
-      - "|    ʜᴏʀᴀ : %server_time_hh:mm:ss a%"      
+      - "|    ☀ ʜᴏʀᴀ : %server_time_hh:mm:ss a%"      
       random: false
       interval: 10
       score: "0"
     line-11:
       text:
-      - "|    ᴛᴘs : %server_tps_1%"      
+      - "|    ⛏ ᴛᴘs : %server_tps_1%"      
       random: false
       interval: 10
       score: 0
