--- a/servidor_minecraft/plugins/AnimatedScoreboard/scoreboards/adminboard.yml
+++ b/servidor_minecraft/plugins/AnimatedScoreboard/scoreboards/adminboard.yml
@@ -20,7 +20,7 @@ display:
       score: 98
     line-3:
       text:
-      - "|    β ʀᴀɴɢᴏ : %luckperms_prefix%"
+      - "#0000ff|    β ʀᴀɴɢᴏ : %luckperms_prefix%"
       random: false
       interval: 20
       score: 97
